clone of project

--- a/helper_scripts/auto_mgmt_network/dhcpd.conf
+++ b/helper_scripts/auto_mgmt_network/dhcpd.conf
@@ -1,8 +1,8 @@
 # /etc/dhcp/dhcpd.conf
-# Created by Topology-Converter v5.0.0
-#    Template Revision: v5.0.0
+# Created by Topology-Converter v4.6.6
+#    Template Revision: v4.6.6
 #    https://github.com/cumulusnetworks/topology_converter
-#    using topology data from: test.dot
+#    using topology data from: topology.dot
 
 ddns-update-style none;
 
@@ -14,7 +14,7 @@ option www-server code 72 = ip-address;
 option cumulus-provision-url code 239 = text;
 
 # Create an option namespace called ONIE
-# See: https://opencomputeproject.github.io/onie/user-guide/index.html#advanced-dhcp-2-vivso
+# See: https://github.com/opencomputeproject/onie/wiki/Quick-Start-Guide#advanced-dhcp-2-vivsoonie/onie/
 option space onie code width 1 length width 1;
 # Define the code names and data types within the ONIE namespace
 option onie.installer_url code 1 = text;
@@ -43,13 +43,12 @@ class "onie-vendor-classes" {
 # OOB Management subnet
 shared-network LOCAL-NET{
 subnet 192.168.200.0 netmask 255.255.255.0 {
-  range 192.168.200.1 192.168.200.254;
+  range 192.168.200.10 192.168.200.50;
   option domain-name-servers 192.168.200.254;
   option domain-name "simulation";
   default-lease-time 172800;  #2 days
   max-lease-time 345600;      #4 days
   option www-server 192.168.200.254;
-  option routers 192.168.200.254;
   option default-url = "http://192.168.200.254/onie-installer";
   option cumulus-provision-url "http://192.168.200.254/ztp_oob.sh";
   option ntp-servers 192.168.200.254;
