--- a/roles/ntp/tasks/main.yml
+++ b/roles/ntp/tasks/main.yml
@@ -5,4 +5,4 @@
     - systemctl stop ntp.service
     - systemctl disable ntp.service
     - systemctl start ntp@mgmt
-  when: nodes.{{ansible_hostname}}.interfaces.mgmt is defined
+  when: nodes[ansible_hostname]["interfaces"]["mgmt"] is defined
