--- a/roles/netq/tasks/main.yml
+++ b/roles/netq/tasks/main.yml
@@ -1,6 +1,8 @@
 ---
 - name: Add netq server IP
   command: netq config add server {{netq_ts}} {{nodes[ansible_hostname]["interfaces"]["mgmt"]["eth0"]["vrf"] | default("")}}
+  tags: netq
 
 - name: Restart NetQ Agent
   command: netq config restart agent
+  tags: netq
