--- a/roles/ntp/tasks/main.yml
+++ b/roles/ntp/tasks/main.yml
@@ -6,3 +6,4 @@
     - systemctl disable ntp.service
     - systemctl start ntp@mgmt
   when: nodes[ansible_hostname]["interfaces"]["mgmt"] is defined
+  tags: ntp
