--- a/roles/ntp/tasks/main.yml
+++ b/roles/ntp/tasks/main.yml
@@ -1,9 +1,19 @@
 ---
+# return code 0 means it's running
+# return code 1 means it's not in the output of grep
+# other return code is unknown
+- name: Check if NTP is already in the vrf
+  shell: "vrf task list | grep ntpd"
+  register: ntp_vrf
+  failed_when: ntp_vrf.rc >= 2
+  when: nodes[ansible_hostname]["interfaces"]["mgmt"] is defined
+  tags: ntp
+
 - name: Configure NTP in management VRF
   command: "{{item}}"
   with_items:
     - systemctl stop ntp.service
     - systemctl disable ntp.service
     - systemctl start ntp@mgmt
-  when: nodes[ansible_hostname]["interfaces"]["mgmt"] is defined
+  when: nodes[ansible_hostname]["interfaces"]["mgmt"] is defined and ntp_vrf.rc != 0
   tags: ntp
