add upgrade step

--- a/roles/netq/tasks/main.yml
+++ b/roles/netq/tasks/main.yml
@@ -1,4 +1,17 @@
 ---
+- name: Add Cumulus Repo
+  apt_repository:
+    repo: deb https://apps3.cumulusnetworks.com/repos/deb CumulusLinux-3 netq-1.2
+    state: present
+  tags: netq
+
+- name: Upgrade NetQ to 1.2.1
+  apt:
+    name: cumulus-netq
+    state: latest
+    update_cache: no
+  tags: netq
+
 - name: Add netq server IP
   command: netq config add server {{netq_ts}} {{nodes[ansible_hostname]["interfaces"]["mgmt"]["eth0"]["vrf"] | default("")}}
   tags: netq
