--- a/roles/netq/tasks/main.yml
+++ b/roles/netq/tasks/main.yml
@@ -12,10 +12,17 @@
     update_cache: no
   tags: netq
 
+- name: Check if netq is already configured
+  command: netq config show server json
+  register: netq_config
+  tags: netq
+
 - name: Add netq server IP
   command: netq config add server {{netq_ts}} {{nodes[ansible_hostname]["interfaces"]["mgmt"]["eth0"]["vrf"] | default("")}}
   tags: netq
+  when: netq_config.stdout != ""
 
 - name: Restart NetQ Agent
   command: netq config restart agent
   tags: netq
+  when: netq_config.stdout != ""
