--- a/roles/ntp/tasks/main.yml
+++ b/roles/ntp/tasks/main.yml
@@ -1,4 +1,10 @@
 ---
+- name: Install NTPd
+  apt:
+    name: ntp
+    state: latest
+  tags: ntp
+
 # return code 0 means it's running
 # return code 1 means it's not in the output of grep
 # other return code is unknown
