update cache when adding cumulus repo to servers

--- a/roles/netq/tasks/main.yml
+++ b/roles/netq/tasks/main.yml
@@ -5,14 +5,14 @@
     state: present
   when: ansible_distribution == "Ubuntu"
 
-- name: Add Cumulus Repo
+- name: Add Cumulus Repo for Ubuntu Xenial
   apt_repository:
     repo: deb https://apps3.cumulusnetworks.com/repos/deb xenial netq-1.2
     state: present
-    update_cache: no
   when: ansible_distribution_release == "xenial"
-
-- name: Add Cumulus Repo
+  tags: netq
+  
+- name: Add Cumulus Repo for Cumulus Linux
   apt_repository:
     repo: deb https://apps3.cumulusnetworks.com/repos/deb CumulusLinux-3 netq-1.2
     state: present
