--- a/roles/netq/tasks/main.yml
+++ b/roles/netq/tasks/main.yml
@@ -33,7 +33,7 @@
   tags: netq
 
 - name: Add netq server IP
-  command: netq config add server {{netq_ts}} {{nodes[ansible_hostname]["interfaces"]["mgmt"]["eth0"]["vrf"] | default("")}}
+  command: netq config add server {{netq_ts}} {{nodes[ansible_hostname]["interfaces"]["mgmt"]["eth0"]["vrf"] | default('')}}
   tags: netq
   when: netq_config.stdout == ""
 
