update cache for netq

--- a/roles/netq/tasks/main.yml
+++ b/roles/netq/tasks/main.yml
@@ -25,6 +25,7 @@
   apt:
     name: cumulus-netq
     state: latest
+    update_cache: yes
   tags: netq
 
 - name: Check if netq is already configured
