update ip addressess:

--- a/roles/ifupdown-l2/tasks/main.yml
+++ b/roles/ifupdown-l2/tasks/main.yml
@@ -10,4 +10,4 @@
   template:
     src: interfaces.j2
     dest: /etc/network/interfaces
-  notify: reload networking legacy
+  notify: reload legacy networking
