create stp loop

--- a/configure_lab.yml
+++ b/configure_lab.yml
@@ -5,6 +5,7 @@
     - ifupdown2-l2
     - ntp
     - netq
+    - stp
 
 - hosts: spines
   become: yes
@@ -12,6 +13,7 @@
     - ifupdown2-l2
     - ntp
     - netq
+    - stp
 
 
 - hosts: servers
