--- a/roles/ifupdown-l2/handlers/main.yml
+++ b/roles/ifupdown-l2/handlers/main.yml
@@ -4,4 +4,4 @@
 # such as changing routes, etc, sometimes this
 # command fails and the only solution is to reboot the server.
 - name: reload legacy networking
-  shell: ifdown --force -a && ifup --force -a
+  shell: ifdown --force -a && ifup --force -a && ifup br0
