--- a/create_loop.yml
+++ b/create_loop.yml
@@ -5,3 +5,9 @@
     - shell: "(bash /home/cumulus/stp_killer.sh &)"
       async: 10
       poll: 0
+
+- hosts: server01
+  gather_facts: no
+  tasks:
+    - command: ping -c 1 192.168.1.200
+      ignore_errors: yes
