putting ping limit back

--- a/roles/ping/tasks/main.yml
+++ b/roles/ping/tasks/main.yml
@@ -3,7 +3,7 @@
 - name: Configure Server01 Ping Cronjob
   cron:
     name: "server ping"
-    job: "ping 192.168.1.1"
+    job: "ping -c 1 192.168.1.1"
   become: yes
   become_user: cumulus
 
@@ -11,6 +11,6 @@
 - name: Configure Server02 Ping Cronjob
   cron:
     name: "server ping"
-    job: "ping 192.168.1.2"
+    job: "ping -c 1 192.168.1.2"
   become: yes
   become_user: cumulus
