register not result

--- a/create_loop.yml
+++ b/create_loop.yml
@@ -16,7 +16,7 @@
   gather_facts: no
   tasks:
     - command: netq leaf01 show stp topology
-      result: netq
+      register: netq
 
     - debug: 
         msg: "{{ netq }}"
