--- a/configure_lab.yml
+++ b/configure_lab.yml
@@ -15,7 +15,6 @@
     - netq
     - stp
 
-
 - hosts: servers
   become: yes
   roles:
@@ -23,3 +22,13 @@
     - ntp
     - netq
     - ping
+
+- hosts: leaf01
+  become: yes
+  tasks:
+    - command: ebtables -I INPUT 1 -d BGA -i swp51 -j DROP
+
+- hosts: spine01
+  become: yes
+  tasks:
+    - command: ebtables -I INPUT 1 -d BGA -i swp1 -j DROP
