--- a/configure_lab.yml
+++ b/configure_lab.yml
@@ -24,11 +24,13 @@
     - ping
 
 - hosts: leaf01
+  gather_facts: no
   become: yes
   tasks:
     - command: ebtables -I INPUT 1 -d BGA -i swp51 -j DROP
 
 - hosts: spine01
+  gather_facts: no
   become: yes
   tasks:
     - command: ebtables -I INPUT 1 -d BGA -i swp1 -j DROP
