--- a/configure_lab.yml
+++ b/configure_lab.yml
@@ -29,7 +29,7 @@
   tasks:
     - command: ebtables -I INPUT 1 -d BGA -i {{nodes[ansible_hostname]["stp_port"]}} -j DROP
     - pause:
-        second: 10
+        seconds: 10
     - command: ebtables -D INPUT 1
 
 # - hosts: spine01
