--- a/configure_lab.yml
+++ b/configure_lab.yml
@@ -29,11 +29,5 @@
   tasks:
     - command: ebtables -I INPUT 1 -d BGA -i {{nodes[ansible_hostname]["stp_port"]}} -j DROP
     - pause:
-        seconds: 10
+        minutes: 3
     - command: ebtables -D INPUT 1
-
-# - hosts: spine01
-#   gather_facts: no
-#   become: yes
-#   tasks:
-#     - command: ebtables -I INPUT 1 -d BGA -i swp1 -j DROP
