--- a/create_loop.yml
+++ b/create_loop.yml
@@ -3,7 +3,7 @@
   gather_facts: no
   become: yes
   tasks:
-    - command: ebtables -I INPUT 1 -d BGA -i {{nodes[ansible_hostname]["stp_port"]}} -j DROP
+    - command: ebtables -I INPUT 1 -d BGA -i {{nodes[inventory_hostname]["stp_port"]}} -j DROP
     - pause:
         seconds: 70
     - command: ebtables -D INPUT 1
